--- a/configure.in
+++ b/configure.in
@@ -548,7 +548,7 @@ maindatainclude="include main.mak"
 AC_SUBST(maindatainclude)
 
 mkdir -p data
-perl -e 'print "main.d: "; @a=<>; chomp @a; print join(" \\\n\t", @a); print " ; touch main.d\n"; ' < $srcdir/data/files.txt > data/main.mak
+perl -e 'print "main.d: "; @a=<>; chomp @a; print join(" \\\n\t", map ( $_ = "\$(srcdir)/" . $_ , @a )); print " ; touch main.d\n"; ' < $srcdir/data/files.txt > data/main.mak
 
 
 AC_CHECK_FILES( $srcdir/data/music/frontiers.ogg $srcdir/data/music/time_to_strike.ogg $srcdir/data/music/machine_wars.ogg,,missingmusic=x )
