Improved memory measurement  Fixed mapeditor crash with pressing ctrl on startup

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -295,6 +295,9 @@
 				RelativePath="..\mdump.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\memory-measurement.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\messagedlg.cpp">
 			</File>
 			<File
