--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -74,13 +74,7 @@ Section "ASC main program (required)"
 
   ; Data Files
   File "../data/dialog/asc2_dlg.zip"
-  File "../data/units/MK1/mk1.con"
-  File "../data/units/MK3/units-mk3.con"
-  File "../data/main.con"
-  File "../data/asc.gfx"
-  File "../data/trrobj2/trrobj2.con"
-  File "../data/buildings/buildings.con"
-  File "../data/trrobj/trrobj.con"
+  File "../data/main.ascdat"
 
   ; Write the installation path into the registry
   WriteRegStr HKLM SOFTWARE\NSIS_Example2 "Install_Dir" "$INSTDIR"
