--- a/Makefile.am
+++ b/Makefile.am
@@ -22,5 +22,5 @@ unitguide:
 	cd doc && make unitguide
 
 dist-hook:
-	rm -rf `find $(distdir) -name CVS -o -name "*.con" -o -name "*music/*.ogg" -o -name asc2_dlg.zip `
+	rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -wholename "*music/*.ogg" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore`
 	rm -rf `find $(distdir)/data/music -name "*.ogg" `
