--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -212,9 +212,10 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = dialog  @MUSICDIR@
-DIST_SUBDIRS = dialog unitsets trrobj buildings icons sounds music
+DIST_SUBDIRS = dialog music
+# unitsets trrobj buildings icons sounds 
 MAINTAINERCLEANFILES = Makefile.in
-EXTRA_DIST = $(srcdir)/* 
+EXTRA_DIST = $(srcdir)/* $(srcdir)/sounds/*
 pkgdata_DATA = main.ascdat 
 all: all-recursive
 
@@ -446,6 +447,9 @@ distdir: $(DISTFILES)
 	      || exit 1; \
 	  fi; \
 	done
+	$(MAKE) $(AM_MAKEFLAGS) \
+	  top_distdir="$(top_distdir)" distdir="$(distdir)" \
+	  dist-hook
 check-am: all-am
 check: check-recursive
 all-am: Makefile $(DATA)
@@ -538,17 +542,17 @@ uninstall-am: uninstall-pkgdataDATA
 
 .PHONY: $(RECURSIVE_CLEAN_TARGETS) $(RECURSIVE_TARGETS) CTAGS GTAGS \
 	all all-am check check-am clean clean-generic clean-libtool \
-	clean-local ctags ctags-recursive distclean distclean-generic \
-	distclean-libtool distclean-tags distdir dvi dvi-am html \
-	html-am info info-am install install-am install-data \
-	install-data-am install-dvi install-dvi-am install-exec \
-	install-exec-am install-html install-html-am install-info \
-	install-info-am install-man install-pdf install-pdf-am \
-	install-pkgdataDATA install-ps install-ps-am install-strip \
-	installcheck installcheck-am installdirs installdirs-am \
-	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	tags tags-recursive uninstall uninstall-am \
+	clean-local ctags ctags-recursive dist-hook distclean \
+	distclean-generic distclean-libtool distclean-tags distdir dvi \
+	dvi-am html html-am info info-am install install-am \
+	install-data install-data-am install-dvi install-dvi-am \
+	install-exec install-exec-am install-html install-html-am \
+	install-info install-info-am install-man install-pdf \
+	install-pdf-am install-pkgdataDATA install-ps install-ps-am \
+	install-strip installcheck installcheck-am installdirs \
+	installdirs-am maintainer-clean maintainer-clean-generic \
+	mostlyclean mostlyclean-generic mostlyclean-libtool pdf pdf-am \
+	ps ps-am tags tags-recursive uninstall uninstall-am \
 	uninstall-pkgdataDATA
 
 
@@ -559,6 +563,11 @@ main.ascdat: main.d
 
 clean-local:
 	rm -f main.ascdat main.d main.mak
+
+dist-hook:
+	cp -pr $(srcdir)/buildings $(srcdir)/unitsets $(srcdir)/icons $(srcdir)/trrobj $(distdir)
+	cp -p `find $(srcdir) -maxdepth 1 -type f` $(distdir)
+	rm -f $(distdir)/main.ascdat
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
