--- a/doc/unitguide/Makefile.in
+++ b/doc/unitguide/Makefile.in
@@ -524,7 +524,8 @@ unitguide:
 	mkdir -p output/html
 	$(top_builddir)/source/tools/linux/asc_weaponguide -d output/html/  -s 100 -i -l html -t ../asc.css -m asc.css --roottech 101000,101913 --allbuildings
 	$(top_builddir)/source/tools/linux/asc_weaponguide -d output/html/  -s 500 -i -l html -t ../asc.css -m asc.css --roottech 101000,101913 --allbuildings
-	cd output && $(abs_top_srcdir)/doc/unitguide/menu.pl
+	cd output 
+	$(abs_top_srcdir)/doc/unitguide/menu.pl $(abs_top_srcdir)/doc/unitguide/output/entries.txt
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
