Updated installer and Makefile for unitguide

--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -77,7 +77,7 @@ Section "ASC main program (required)"
   File "../data/main.ascdat"
 
   ; Write the installation path into the registry
-  WriteRegStr HKLM SOFTWARE\NSIS_Example2 "Install_Dir" "$INSTDIR"
+  WriteRegStr HKLM "SOFTWARE\Advanced Strategic Command" "InstallDir2" "$INSTDIR"
   
   ; Write the uninstall keys for Windows
   WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Advanced Strategic Command" "DisplayName" "Advanced Strategic Command 2"
