--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -76,8 +76,8 @@ Section "ASC main program (required)"
   File "../data/dialog/asc2_dlg.zip"
   File "../data/main.ascdat"
 
-  ; Write the installation path into the registry
-  WriteRegStr HKLM "SOFTWARE\Advanced Strategic Command" "InstallDir2" "$INSTDIR"
+  ; Write the installation path into the registry - not used any more, since we store in AppData
+  ; WriteRegStr HKLM "SOFTWARE\Advanced Strategic Command" "InstallDir2" "$INSTDIR"
   
   ; Write the uninstall keys for Windows
   WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\Advanced Strategic Command" "DisplayName" "Advanced Strategic Command 2"
