Updated keyboard definition  Added objcts

--- a/source/doxygen.config
+++ b/source/doxygen.config
@@ -93,6 +93,7 @@ EXCLUDE                = tools \
                          libs/libsigc++ \
                          libs/loki \
                          libs/rand \
+                         libs/sdlmm \
                          libs/triangul \
                          dos \
                          test
