Added new feature "internalAMmoTransfer"  Objekt Kai fixes  Added check for duplicate unit IDs

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -547,6 +547,9 @@
 					RelativePath="..\..\..\dialogs\fileselector.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\internalAmmoTransferDialog.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\locatefile.cpp">
 				</File>
 				<File
