--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -9,12 +9,12 @@ noinst_LTLIBRARIES      = libdialogs.la libgamedialogs.la libmapeddialogs.la
 
 libdialogs_la_SOURCES   = editmapparam.cpp cargowidget.cpp selectionwindow.cpp fileselector.cpp playersetup.cpp alliancesetup.cpp newgame.cpp soundsettings.cpp \
                           emailsetup.cpp unitinfodialog.cpp  editgameoptions.cpp vehicletypeselector.cpp fieldmarker.cpp admingame.cpp pwd_dlg.cpp terraininfo.cpp \
-                          messagedialog.cpp locatefile.cpp
+                          messagedialog.cpp locatefile.cpp 
                           
 libdialogs_la_LIBADD    = @SDL_LIBS@ 
 
 libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp \
-                              editplayerdata.cpp buildingtypeselector.cpp choosetech.cpp productionanalysis.cpp
+                              editplayerdata.cpp buildingtypeselector.cpp choosetech.cpp productionanalysis.cpp internalAmmoTransferDialog.cpp
                               
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
