--- a/source/libs/sdl_sound/Makefile.am
+++ b/source/libs/sdl_sound/Makefile.am
@@ -4,7 +4,7 @@ INCLUDE = -I$(top_src_dir)
 
 noinst_LTLIBRARIES	= libSDL_sound_int.la
 
-AM_CFLAGS   = -DSOUND_SUPPORTS_OGG  $(SDL_CFLAGS) $(VORBIS_CFLAGS)
+AM_CFLAGS   = -DSOUND_SUPPORTS_OGG -DSOUND_SUPPORTS_WAV $(SDL_CFLAGS) $(VORBIS_CFLAGS)
 
-libSDL_sound_int_la_SOURCES = ogg.c SDL_sound.c audio_convert.c
+libSDL_sound_int_la_SOURCES = ogg.c wav.c SDL_sound.c audio_convert.c
 libSDL_sound_int_la_LIBADD = @VORBIS_LIBS@ @VORBISFILE_LIBS@ @VORBISENC_LIBS@
