Updated build system

--- a/configure.in
+++ b/configure.in
@@ -204,7 +204,7 @@ if test "X$SDLsoundmissing" = "Xy" ; then
    if test "x$no_vorbis" = "x" ; then
       AdditionalIncludeDir="$AdditionalIncludeDir -I\$(abs_top_srcdir)/source/libs/sdl_sound "
       
-      SDL_SOUND_LIB="\$(abs_top_srcdir)/source/libs/sdl_sound/libSDL_sound_int.la"
+      SDL_SOUND_LIB="\$(abs_top_builddir)/source/libs/sdl_sound/libSDL_sound_int.la"
       
       SdlSoundDir=sdl_sound
       AC_SUBST(SdlSoundDir)
