--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -565,7 +565,7 @@ main.ascdat: main.d
 	cd $(srcdir) && @abs_top_builddir@/source/tools/linux/asc_mount \@files.txt @abs_builddir@/main.ascdat && touch main.d
 
 clean-local:
-	rm -f main.ascdat main.d main.mak
+	rm -f main.ascdat main.d 
 
 dist-hook:
 	cp -pr $(srcdir)/buildings $(srcdir)/unitsets $(srcdir)/icons $(srcdir)/trrobj $(distdir)
