--- a/source/libs/Makefile.am
+++ b/source/libs/Makefile.am
@@ -1,7 +1,7 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= triangul sdlmm paragui loki @SdlSoundDir@ @LIBBZ2@ 
+SUBDIRS 		= triangul sdlmm paragui loki revel @SdlSoundDir@ @LIBBZ2@ 
 
-DIST_SUBDIRS= triangul sdlmm paragui loki sdl_sound
+DIST_SUBDIRS= triangul sdlmm paragui loki revel sdl_sound 
 
 EXTRA_DIST=$(srcdir)/rand/*
