--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -100,6 +100,8 @@ asc_DEPENDENCIES =  \
 	$(top_builddir)/source/widgets/libwidgets.la \
 	$(top_builddir)/source/sdl/libsdlsnd.la \
 	$(top_builddir)/source/network/libnetwork.la \
+	$(top_builddir)/source/video/libvideo.la \
+	$(top_builddir)/source/libs/revel/librevel.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
@@ -299,6 +301,7 @@ $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/li
 $(top_builddir)/source/dialogs/libgamedialogs.la $(top_builddir)/source/actions/libactions.la \
 $(top_builddir)/source/libs/paragui/src/libparagui.la $(top_builddir)/source/widgets/libwidgets.la \
 $(top_builddir)/source/sdl/libsdlsnd.la $(top_builddir)/source/network/libnetwork.la  \
+$(top_builddir)/source/video/libvideo.la $(top_builddir)/source/libs/revel/librevel.la \
 @LDADDLIBBZ2@  $(SIGC_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(BOOST_LIBS) $(SDL_SOUND_LIB) 
 
 all: all-am
