--- a/doc/manpages/Makefile.in
+++ b/doc/manpages/Makefile.in
@@ -136,6 +136,7 @@ SIGC_LIBS = @SIGC_LIBS@
 STRIP = @STRIP@
 SdlSoundDir = @SdlSoundDir@
 VERSION = @VERSION@
+VIDEOCODER = @VIDEOCODER@
 VORBISENC_LIBS = @VORBISENC_LIBS@
 VORBISFILE_LIBS = @VORBISFILE_LIBS@
 VORBIS_CFLAGS = @VORBIS_CFLAGS@
