--- a/data/music/Makefile.in
+++ b/data/music/Makefile.in
@@ -196,6 +196,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+revellib = @revellib@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
