--- a/installer/Makefile.in
+++ b/installer/Makefile.in
@@ -187,6 +187,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+revellib = @revellib@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
