--- a/source/libs/Makefile.am
+++ b/source/libs/Makefile.am
@@ -1,6 +1,6 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS 		= triangul sdlmm paragui loki revel @SdlSoundDir@ @LIBBZ2@ 
+SUBDIRS 		= triangul sdlmm paragui loki @revellib@ @SdlSoundDir@ @LIBBZ2@ 
 
 DIST_SUBDIRS= triangul sdlmm paragui loki revel sdl_sound 
 
