--- a/source/libs/Makefile.in
+++ b/source/libs/Makefile.in
@@ -197,6 +197,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+revellib = @revellib@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -206,7 +207,7 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = triangul sdlmm paragui loki revel @SdlSoundDir@ @LIBBZ2@ 
+SUBDIRS = triangul sdlmm paragui loki @revellib@ @SdlSoundDir@ @LIBBZ2@ 
 DIST_SUBDIRS = triangul sdlmm paragui loki revel sdl_sound 
 EXTRA_DIST = $(srcdir)/rand/*
 all: all-recursive
