--- a/source/libs/sdlmm/Makefile.in
+++ b/source/libs/sdlmm/Makefile.in
@@ -198,6 +198,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+revellib = @revellib@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
