--- a/source/tools/lib/Makefile.in
+++ b/source/tools/lib/Makefile.in
@@ -205,6 +205,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+revellib = @revellib@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
