--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -100,11 +100,9 @@ asc_DEPENDENCIES =  \
 	$(top_builddir)/source/widgets/libwidgets.la \
 	$(top_builddir)/source/sdl/libsdlsnd.la \
 	$(top_builddir)/source/network/libnetwork.la \
-	$(top_builddir)/source/video/libvideo.la \
-	$(top_builddir)/source/libs/revel/librevel.la \
+	$(top_builddir)/source/video/libvideo.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -264,6 +262,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+revellib = @revellib@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -302,7 +301,7 @@ $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/li
 $(top_builddir)/source/dialogs/libgamedialogs.la $(top_builddir)/source/actions/libactions.la \
 $(top_builddir)/source/libs/paragui/src/libparagui.la $(top_builddir)/source/widgets/libwidgets.la \
 $(top_builddir)/source/sdl/libsdlsnd.la $(top_builddir)/source/network/libnetwork.la  \
-$(top_builddir)/source/video/libvideo.la $(top_builddir)/source/libs/revel/librevel.la \
+$(top_builddir)/source/video/libvideo.la  \
 @LDADDLIBBZ2@  $(SIGC_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(BOOST_LIBS) $(SDL_SOUND_LIB) 
 
 all: all-am
