--- a/source/video/Makefile.in
+++ b/source/video/Makefile.in
@@ -205,6 +205,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+revellib = @revellib@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -217,7 +218,7 @@ MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = @SDL_CFLAGS@ 
 noinst_LTLIBRARIES = libvideo.la
 libvideo_la_SOURCES = videorecorder.cpp
-libvideo_la_LIBADD = @SDL_LIBS@ @VIDEOCODER@  
+libvideo_la_LIBADD = @SDL_LIBS@ @VIDEOCODER@ @revellibfile@ 
 EXTRA_DIST = $(srcdir)/*.h  
 all: all-am
 
