--- a/source/video/Makefile.in
+++ b/source/video/Makefile.in
@@ -206,6 +206,7 @@ prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
 revellib = @revellib@
+revellibfile = @revellibfile@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -215,7 +216,7 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-AM_CXXFLAGS = @SDL_CFLAGS@ 
+AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS) 
 noinst_LTLIBRARIES = libvideo.la
 libvideo_la_SOURCES = videorecorder.cpp
 libvideo_la_LIBADD = @SDL_LIBS@ @VIDEOCODER@ @revellibfile@ 
