--- a/Makefile.in
+++ b/Makefile.in
@@ -216,6 +216,7 @@ prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
 revellib = @revellib@
+revellibfile = @revellibfile@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
