--- a/doc/manpages/Makefile.in
+++ b/doc/manpages/Makefile.in
@@ -192,6 +192,7 @@ prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
 revellib = @revellib@
+revellibfile = @revellibfile@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
