--- a/source/dialogs/Makefile.in
+++ b/source/dialogs/Makefile.in
@@ -224,6 +224,7 @@ prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
 revellib = @revellib@
+revellibfile = @revellibfile@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
