--- a/source/libs/paragui/src/core/Makefile.in
+++ b/source/libs/paragui/src/core/Makefile.in
@@ -212,6 +212,7 @@ prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
 revellib = @revellib@
+revellibfile = @revellibfile@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
